# Sirin

./: .env.example  .gitignore  .taurignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dioxus.toml  FEATURES.md  LICENSE  Makefile  OPEN_CLAUDE_PROGRESS.md  README.md  REALTIME_TEST_GUIDE.md  SELF_IMPROVEMENT_VERIFICATION.md  __sirin_test_patch1_555646200_954.txt  __sirin_test_plan13_564184300_960.txt  build.rs  next.config.mjs  package-lock.json  package.json  setup.sh  sirin.err  sirin.iss  sirin_p1.err  sirin_test.err  sirin_test_run.log.err  tailwind.config.ts  tauri.conf.json  test-realtime-flow.mjs  test-self-improvement-realtime.mjs  test-self-improvement.mjs  test_open_claude.sh  test_run_id.txt  tsconfig.tsbuildinfo  verify-self-improvement.mjs
.cargo/: config.toml
.claude/: launch.json  settings.json
.claude/commands/: build-check.md  cleanup.md  commit.md  dev-start.md  fix-skills.md  integrate-memory.md  integrate-search.md  persona-edit.md  status.md  task-log.md  test.md  ui-map.md
.github/workflows/: release.yml
.sirin/: .gitignore  authz.yaml.example
app/: globals.css  layout.tsx  page.tsx
capabilities/: default.json
components/: logs-viewer.tsx  task-board.tsx  telegram-auth-card.tsx
components/ui/: badge.tsx  button.tsx  card.tsx
config/: agents.yaml  llm.yaml  mcp_servers.yaml  persona.yaml  retry_policy.yaml  test-schema.json
config/coverage/: agora_market.yaml
config/scripts/: btc_price.rhai  vip_maintain.py  vip_maintain.rhai  workflow_build.py  workflow_define.py  workflow_plan.py  workflow_review.py  workflow_ship.py  workflow_verify.py
config/skills/: analyze_pr_diff.yaml  browser_test.yaml  btc_price.yaml  config_check.yaml  context_summary.yaml  market_monitor.yaml  merchant_followup.yaml  vip_maintain.yaml  workflow_build.yaml  workflow_define.yaml  workflow_plan.yaml  workflow_review.yaml  workflow_ship.yaml  workflow_verify.yaml
config/tests/: agora_chat_sse.yaml  agora_login_text.yaml  agora_login_vision.yaml  agora_market_smoke.yaml  agora_notification_lifecycle.yaml  agora_product_form_pickup.yaml  agora_staking.yaml  agora_webrtc_voice_call.yaml  example_en.yaml  wiki_smoke.yaml
data/code_graph/: graph.jsonl
data/eval/: cases.jsonl  latest-report.json  predictions.jsonl
data/memory/: codebase_index.jsonl  memories.db
data/tracking/: .gitkeep  research.jsonl  sirin_context_199096390.jsonl  sirin_context_294813052.jsonl  sirin_context_393319840.jsonl  sirin_context_404200103.jsonl  sirin_context_412708220.jsonl  sirin_context_444910791.jsonl  sirin_context_483095999.jsonl  sirin_context_638104320.jsonl  sirin_context_859916760.jsonl  sirin_context_90364427.jsonl  sirin_context_987513634.jsonl
docs/: ARCHITECTURE.md  DESIGN_AUTHZ.md  DESIGN_BROWSER_AUTHORITY.md  DESIGN_MONITOR.md  ENV_REFERENCE.md  MACOS_STARTUP.md  MCP_API.md  QUICKSTART.md  ROADMAP.md  agora-market.md  agora_market_issues.md  squad-roadmap.md  test-runner-roadmap.md
docs/acceptance/: issue_34_pledge.md
docs/architecture/: README.md  browser.md  claude_session.md  crash_diagnosis.md  llm.md  mcp_client.md  mcp_server.md  memory.md  multi_agent.md  persona.md  researcher.md  telegram.md  test_runner.md  ui_egui.md
docs/postmortem/: 2026-04-19-silent-crash.md
docs/research/: claude-in-chrome-vs-sirin-benchmark.md
docs/spikes/: ext-companion-poc.md
examples/: agora-market.md
ext/: background.js  manifest.json
icons/: icon.icns
scripts/: README.md  check_kb_freshness.sh  dev-relaunch.sh  eval-local.mjs  fetch-handoff.sh.example  install_kb_freshness_hook.sh  kill-port.ps1  kill-port.sh  ocr_windows_find_text.ps1  preflight.sh  squad-cleanup-old-done.sh  squad-restart.sh  squad-status.sh  verify-new-actions.sh  watch-sirin.ps1
src/: agent_config.rs  browser.rs  browser_ax.rs  browser_exec.rs  chat_history.rs  claude_session.rs  code_graph.rs  config.rs  config_check.rs  devex.rs  diagnose.rs  error.rs  events.rs  ext_server.rs  followup.rs  human_behavior.rs  jsonl_log.rs  kb_client.rs  llm.rs  log_buffer.rs  log_manager.rs  log_subscriber.rs  logs.rs  main.rs  mcp_client.rs  mcp_gateway.html  mcp_gateway.rs  mcp_server.rs  meeting.rs  memory.rs  open_claude_client.rs  optimization.rs  pending_reply.rs  persona.rs  platform.rs  process_group.rs  researcher.rs  rhai_engine.rs  rpc_server.rs  skill_loader.rs  (+9 more)
src/adk/: agent.rs  context.rs  mod.rs  runner.rs  tool.rs
src/agents/: chat_agent.rs  coding_agent.rs  followup_agent.rs  mod.rs  planner_agent.rs  planner_intent.rs  research_agent.rs  router_agent.rs
src/assistant/: mod.rs
src/authz/: audit.rs  config.rs  engine.rs  mod.rs  url_blocker.rs
src/followup/: candidates.rs  mod.rs
src/integrations/: mod.rs
src/llm/: backends.rs  mod.rs  probe.rs  usage.rs
src/memory/: codebase.rs  context.rs  mod.rs
src/monitor/: control.rs  events.rs  mod.rs  replay.rs  screenshot_pump.rs  state.rs  trace_writer.rs
src/multi_agent/: github_adapter.rs  knowledge.rs  mod.rs  queue.rs  roles.rs  session.rs  usage.rs  worker.rs  worktree.rs
src/perception/: canvas_detect.rs  capture.rs  mod.rs  ocr.rs
src/persona/: behavior.rs  mod.rs  task_tracker.rs
src/researcher/: fetch.rs  mod.rs  persistence.rs  pipeline.rs
src/teams/: browser_client.rs  mod.rs
src/telegram/: commands.rs  config.rs  filter.rs  handler.rs  language.rs  llm.rs  mod.rs  reply.rs
src/test_runner/: action_verify.rs  ax_diff_context.rs  discovery.rs  executor.rs  executor_fallback.rs  executor_open_claude.rs  gif_recorder.rs  i18n.rs  lint.rs  mod.rs  notify.rs  parser.rs  retry_policy.rs  runs.rs  scaffold.rs  screenshot_cache.rs  som_renderer.rs  store.rs  triage.rs
src/ui_dx/: log_view.rs  meeting.rs  mod.rs  settings.rs  sidebar.rs  system.rs  workflow.rs  workspace.rs
src/ui_egui/: automation_panel.rs  browser.rs  browser_monitor.rs  command_palette.rs  coverage_panel.rs  dashboard.rs  log_view.rs  mod.rs  (+13 more)
tests/: ext_bridge_poc.rs  optimization_test.rs  pipeline_test.rs  research_test.rs
tmp/: autonomous-5min-baseline.json  post-fix-5min-baseline.json
web/: DESIGN.md  app.js  index.html  style.css
(+74 files in other folders)
