[package]
name = "sirin"
version = "0.1.0"
edition = "2021"
description = "A pure-Rust desktop AI agent (egui + Tokio)"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = { version = "0.31", features = ["default"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
grammers-client = "0.9.0"
grammers-session = "0.9.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "query", "stream"] }
scraper = "0.19.0"
futures = "0.3.31"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
headless_chrome = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
axum = { version = "0.8", features = ["ws"] }

[build-dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
