[package]
name = "sirin"
version = "0.1.0"
edition = "2021"
description = "A pure-Rust cross-platform AI agent (Dioxus + Tokio)"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = { version = "0.31", features = ["default"] }
thiserror = "2"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
grammers-client = "0.9.0"
grammers-session = "0.9.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "query", "stream", "blocking"] }
rhai = { version = "1", features = ["sync", "serde"] }
scraper = "0.19.0"
futures = "0.3.31"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
headless_chrome = "1.0"
axum = { version = "0.8", features = ["ws"] }

[package.metadata.bundle]
name = "Sirin"
identifier = "com.sirin.app"
version = "0.1.0"
copyright = "Copyright (c) 2025 Sirin"
category = "Productivity"
short_description = "Pure-Rust desktop AI Agent platform"
long_description = "Multi-agent desktop AI platform with Telegram, Teams integration and LLM-powered automation."
icon = ["assets/icon.icns", "assets/icon.png"]
osx_minimum_system_version = "12.0"

[build-dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
