[package]
name = "sirin"
version = "0.5.2"
edition = "2021"
description = "A pure-Rust desktop AI agent (egui + Tokio)"

[[bin]]
name = "sirin"
path = "src/main.rs"

[[bin]]
name = "sirin-call"
path = "src/bin/sirin_call.rs"

[dependencies]
# eframe / egui dropped in v0.5.0 — UI is now a web app served by mcp_server.
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread", "macros",
    "sync", "time", "net", "fs",
    "process", "io-util",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
grammers-client = "0.9.0"
grammers-session = "0.9.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query", "stream", "blocking"] }
rhai = { version = "1", features = ["sync", "serde"] }
futures-util = "0.3"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
rusqlite = { version = "0.31", features = ["bundled"] }
headless_chrome = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["timeout", "cors"] }
globset = "0.4"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"

# Windows Job Object — KILL_ON_JOB_CLOSE so all child processes (claude, node,
# git, ...) are auto-terminated when sirin.exe exits.  Prevents the orphan
# claude.exe accumulation observed during 2026-04-19 dev session (12 zombies
# from earlier crashes, several with 1-2 hours of CPU time).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[package.metadata.bundle]
name = "Sirin"
identifier = "com.sirin.app"
version = "0.1.0"
copyright = "Copyright (c) 2025 Sirin"
category = "Productivity"
short_description = "Pure-Rust desktop AI Agent platform"
long_description = "Multi-agent desktop AI platform with Telegram, Teams integration and LLM-powered automation."
icon = ["assets/icon.icns", "assets/icon.png"]
osx_minimum_system_version = "12.0"

[dev-dependencies]
# Already in the dep graph via axum's `ws` feature — declared here so the
# `ext_bridge_poc` integration test (Issue #52) can drive a WebSocket client.
tokio-tungstenite = "0.28"

[build-dependencies]

# dev-fast: for local dev loops and E2E test iterations.
# ~2-3 min build vs 6-10 min for release.  Not for production distribution.
#
# Usage:
#   cargo build --profile dev-fast
#   ./target/dev-fast/sirin.exe
#
# Compared to release: no LTO, 16 codegen-units, opt-level 1.
# Compared to debug: faster binary (avoids LLM call timeout on slow machines).
[profile.dev-fast]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
strip = false

[profile.release]
# Intentionally leave `panic` unset (defaults to "unwind").  The MCP server's
# spawn_blocking helpers rely on tokio's JoinError::is_panic() to convert a
# handler panic into a JSON-RPC error response — that only works with unwind
# semantics.  Under `panic = "abort"` a single bad request would crash the
# whole Sirin process and leave a zombie listening socket (observed on 7700 /
# 7710).  The ~2-3 MB binary-size cost is amortized by LTO + strip below.
codegen-units = 4      # 4 parallel codegen units (was 1) — ~2x faster link
lto = "thin"           # thin LTO: ~90% of fat LTO's optimization, 3-4x faster
opt-level = "s"
strip = true


[patch.crates-io]
# transport fix: continue instead of break on browser event SendError.
# PR: https://github.com/Redandan/Sirin/pull/118
# Fork: https://github.com/Redandan/rust-headless-chrome/tree/sirin-transport-fix
headless_chrome = { git = "https://github.com/Redandan/rust-headless-chrome", branch = "sirin-transport-fix" }
